# libraryassembler

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  gitleaks-scanning.yml
designs/: dashboard_wireframe.md  detail_view_wireframe.md
docs/: ARCHITECTURE.md  CHANGELOG.md  METADATA_STRATEGY.md  PLANNING.md  USER_GUIDE.md
src/: __init__.py  models.py  routes.py
src/libraryassembler/: __init__.py  app.py  config.py  database.py
src/libraryassembler/models/: __init__.py  book.py  ingestion.py  media_item.py
src/libraryassembler/routes/: __init__.py  health.py  home.py
src/services/: __init__.py  metadata.py
tests/: conftest.py  test_app.py  test_metadata.py  test_models.py
